contact css update, footer/spacing fix

--- a/contact.css
+++ b/contact.css
@@ -7,10 +7,14 @@
     font-family: 'Poppins', sans-serif;
 }
 
+html, body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 body {
     background: linear-gradient(to top, #D2E2FB 30%, #86A8DB); /* Same gradient as the .home section */
-    height: 100%;
-    min-height: 100vh;
 }
 
 header {
@@ -63,11 +67,15 @@ header nav:hover > a:not(:hover) {
     background: none;
 }
 
+main {
+    flex: 1;
+}
+
 .portrait {
     display: flex;
     justify-content: center;
     align-items: end;
-    height: 65vh; /* Adjust the height as needed */
+    height: 55vh; /* Adjust the height as needed */
     margin-bottom: 20px; /* Add margin bottom for gap */
 }
 
@@ -122,7 +130,6 @@ footer {
     padding: 20px;
     background: rgba(0, 0, 0, 0.8);
     color: white;
-    position: relative; /* Change to relative to keep footer within the normal flow */
     width: 100%;
-    margin-top: 60px; /* Add margin-top to create space above the footer */
+    margin-top: auto; /* Add margin-top to create space above the footer */
 }
